Add security. Use spring boot version 3. Remove Swagger